--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3003
 MONGODBURI=mongodb://localhost:27017/blackboxDB
-BASEURL=http://localhost:3000
+BASEURL=https://blackbfrontend.herokuapp.com
